<resources>
    <string name="app_name">ActionHomeTest</string>
    <string name="red_title">红色字体</string>
    <string name="green_title">绿色字体</string>
    <string name="blue_title">蓝色字体</string>
    <string name="font_10">10号字体</string>
    <string name="font_12">12号字体</string>
    <string name="font_14">14号字体</string>
    <string name="font_16">16号字体</string>
    <string name="font_18">18号字体</string>
    <string name="font_size">字体大小</string>
    <string name="font_color">字体颜色</string>
    <string name="plain_menu">普通菜单</string>
</resources>
