<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/font_size"
        android:icon="@drawable/font"
        android:showAsAction="always|withText"
        android:title="@string/font_size">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/f_10"
                    android:title="@string/font_10" />
                <item
                    android:id="@+id/f_12"
                    android:title="@string/font_12" />
                <item
                    android:id="@+id/f_14"
                    android:title="@string/font_14" />
                <item
                    android:id="@+id/f_16"
                    android:title="Item" />
                <item
                    android:id="@+id/f_18"
                    android:title="@string/font_18" />
            </group>
        </menu>
    </item>
    <item
        android:id="@+id/plain_menu"
        android:showAsAction="always|withText"
        android:title="@string/plain_menu" />
    <item
        android:id="@+id/font_color"
        android:icon="@drawable/color"
        android:showAsAction="always"
        android:title="@string/font_color">
        <menu>
            <group>
                <item
                    android:id="@+id/red"
                    android:title="@string/red_title" />
                <item
                    android:id="@+id/blue"
                    android:title="@string/blue_title" />
                <item
                    android:id="@+id/green"
                    android:title="@string/green_title" />
            </group>
        </menu>
    </item>
</menu>